# MobyDick_NEW

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MobyDick.sln  README.md  vcpkg.json
BlindBetty/: BlindBetty.vcxproj
BlindBetty/src/: BBColorMap.cpp  BBColorMap.h  BBComponentFactory.cpp  BBComponentFactory.h  BBContactFilter.cpp  BBContactFilter.h  BBContactListener.cpp  BBContactListener.h  BBContextManager.cpp  BBContextManager.h  BBEnumMap.h  BBGame.cpp  BBGame.h  GameConstants.h  blindBetty.cpp
MobyDick/: CMakeLists.txt  MobyDick.rc  MobyDick.vcxproj  MobyDick.vcxproj.filters  ProgMoveByAction.cpp  ProgMoveByAction.h  readme.md  vcpkg.json
MobyDick/ChatGPTContext/: bobby_context.txt
MobyDick/include/: MobyDick.h
MobyDick/src/: Animation.cpp  Animation.h  BaseConstants.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  Box2DEnkiAdapter.h  Camera.cpp  ColorMap.cpp  ComponentFactory.cpp  ComponentFactory.h  ContactFilter.cpp  ContactHandler.cpp  ContactHandler.h  ContactListener.cpp  ContactListener.h  ContextManager.cpp  ContextManager.h  DebugDraw.cpp  DebugDraw.h  EnumMap.cpp  EnumMap.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  LevelManager.cpp  LevelManager.h  NavigationManager.cpp  NavigationManager.h  ObjectPoolManager.cpp  QueryAABBHits.cpp  QueryAABBHits.h  RayCastCallBack.cpp  RayCastHits.cpp  RayCastHits.h  Renderer.cpp  Renderer.h  RendererGL.cpp  RendererGL.h  RendererSDL.cpp  RendererSDL.h  (+14 more)
MobyDick/src/IMGui/: IMGuiExample.cpp  IMGuiFactory.cpp  IMGuiFactory.h  IMGuiInteractiveMenuBasic.cpp  IMGuiItem.h  IMGuiUtil.cpp  IMGuiUtil.h
MobyDick/src/actions/: Action.cpp  Action.h  ActionFactory.cpp  ActionFactory.h  ActorWarpAction.cpp  ActorWarpAction.h  ButtonCloseInventoryAction.cpp  ButtonCloseInventoryAction.h  CloseInventoryAction.cpp  CloseInventoryAction.h  CloseShelfInventoryAction.cpp  CloseShelfInventoryAction.h  DefaultMoveAction.cpp  DefaultMoveAction.h  DefaultOnHoverAction.cpp  DefaultOnHoverAction.h  DefaultOnHoverOutAction.cpp  DefaultOnHoverOutAction.h  DefaultRotateAction.cpp  DefaultRotateAction.h  DroneMoveAction.cpp  DroneMoveAction.h  InteractAction.cpp  InteractAction.h  ItemhHighlightApplyAction.cpp  ItemhHighlightApplyAction.h  ItemhHighlightRemoveAction.cpp  ItemhHighlightRemoveAction.h  NoAction.h  OnOffToggleAction.cpp  OnOffToggleAction.h  PlayCutSceneAction.cpp  PlayCutSceneAction.h  PrimitiveMoveAction.h  ProgressiveMoveByAction.cpp  ProgressiveMoveByAction.h  ShowInventoryAction.cpp  ShowInventoryAction.h  TakeItemAction.cpp  TakeItemAction.h  (+5 more)
MobyDick/src/components/: ActionComponent.cpp  ActionComponent.h  AnimationComponent.cpp  AnimationComponent.h  AttachmentsComponent.cpp  AttachmentsComponent.h  BrainComponent.cpp  BrainComponent.h  CheckPointComponent.cpp  ChildrenComponent.cpp  ChildrenComponent.h  Component.cpp  Component.h  CompositeComponent.cpp  ContainerComponent.cpp  EnvironmentComponent.cpp  EnvironmentComponent.h  GridDisplayComponent.cpp  GridDisplayComponent.h  HudComponent.cpp  HudComponent.h  IMGuiComponent.cpp  IMGuiComponent.h  InterfaceComponent.cpp  InterfaceComponent.h  InventoryComponent.cpp  InventoryComponent.h  LightComponent.cpp  LightComponent.h  LightedTreatmentComponent.cpp  LightedTreatmentComponent.h  MaskedOverlayComponent.cpp  MaskedOverlayComponent.h  NavigationComponent.cpp  ParticleComponent.cpp  ParticleComponent.h  ParticleXComponent.cpp  ParticleXComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  (+17 more)
MobyDick/src/cutScenes/: CutSceneExample.cpp  CutSceneFactory.h
MobyDick/src/environmentEvents/: EnvironmentEventFactory.cpp  EnvironmentEventFactory.h  SoundEvent.cpp  SoundLoopEvent.h
MobyDick/src/hud/: HudItemFactory.cpp  HudItemFactory.h  HudStatusSeries.cpp  HudStatusText.cpp
MobyDick/src/opengl/: DrawBatch.h  GLDrawer.cpp  GLDrawer.h  GLRenderer.cpp  GLRenderer.h  Shader.h  SpriteDrawBatch.cpp
MobyDick/src/particleEffects/: BaseParticleEffects.h
MobyDick/src/puzzles/: Puzzle.cpp  Puzzle.h  PuzzleFactory.cpp  PuzzleFactory.h  UnLockContainer.cpp  UnLockContainer.h  UnLockDoorPuzzle.cpp  UnLockDoorPuzzle.h
MobyDick/src/stateRules/: baseStateRules.cpp  baseStateRules.h
include/: GameGlobals.h  MobyDick.h
scripts/toolchains/: android-vcpkg.cmake
src/: BaseConstants.h  Blueprint.cpp  Box2DDebugDraw.cpp  Box2DEnkiAdapter.cpp  Camera.cpp  Camera.h  ContactFilter.cpp  ContactFilter.h  ContextManager.cpp  ContextManager.h  DebugDraw.cpp  GameConfig.cpp  GameConfig.h  GameObject.cpp  GameObjectManager.cpp  GameStateManager.cpp  GameStateManager.h  JsonSerialization.h  LevelManager.cpp  Renderer.h  RendererGL.cpp  RendererSDL.cpp  RendererSDL.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  SceneManager.cpp  SoundManager.cpp  SoundManager.h  TextureManager.cpp  Timer.cpp  Timer.h  Util.cpp  Util.h  game.cpp  game.h
src/IMGui/: IMGuiExample.cpp  IMGuiInteractiveMenuBasic.cpp  IMGuiItem.cpp  IMGuiText.cpp  IMGuiUtil.cpp  IMGuiUtil.h
src/actions/: Action.cpp  Action.h  ButtonCloseInventoryAction.cpp  ButtonCloseInventoryAction.h  CloseInventoryAction.cpp  CloseInventoryAction.h  DefaultMoveAction.cpp  DefaultMoveAction.h  DefaultRotateAction.h  ItemhHighlightApplyAction.cpp  ItemhHighlightApplyAction.h  ItemhHighlightRemoveAction.cpp  ItemhHighlightRemoveAction.h  NoAction.h  OnOffToggleAction.cpp  OnOffToggleAction.h  PlayCutSceneAction.h  PrimitiveMoveAction.h  ProgressiveMoveByAction.cpp  ProgressiveMoveByAction.h  TakeItemAction.cpp  TakeItemAction.h  ToggleInventoryAction.cpp  ToggleInventoryAction.h  UseAction.h
src/components/: ActionComponent.cpp  AnimationComponent.cpp  AnimationComponent.h  AttachmentsComponent.cpp  BrainComponent.cpp  CheckPointComponent.cpp  CheckPointComponent.h  ChildrenComponent.cpp  Component.cpp  CompositeComponent.cpp  CompositeComponent.h  ContainerComponent.h  EnvironmentComponent.cpp  EnvironmentComponent.h  GridDisplayComponent.cpp  HudComponent.cpp  IMGuiComponent.cpp  InterfaceComponent.cpp  InventoryComponent.cpp  InventoryComponent.h  LightComponent.cpp  LightComponent.h  LightedTreatmentComponent.cpp  (+22 more)
(+46 files in other folders)
